# Estrutura-de-Projetos

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: output_file.xlsx
tests/: test_pipeline.py
