[tool.poetry]
name = "staterprojectkit"
version = "0.1.0"
description = "Meu primeiro projeto de ETL"
authors = ["Carlos Henrique Simoes <carlinhos.ryck2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pillow = "^11.0.0"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
