[tool.poetry]
name = "staterprojectkit"
version = "0.1.0"
description = "Meu primeiro projeto de ETL"
authors = ["Carlos Henrique Simoes <carlinhos.ryck2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pillow = "^11.0.0"
pytest = "^8.3.4"
isort = "^5.13.2"
blue = "^0.9.1"
pip-audit = "^2.7.3"
taskipy = "^1.14.1"
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.12.2"
pygments = "^2.18.0"
mkdocs-material = "^9.5.47"
pymdown-extensions = "^10.12"
mkdocs-bootstrap386 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "blue --check . && isort --check --diff ."
test = "poetry run pytest -v"
run = "poetry run python app/main.py"
kill = "kill -9 $(lsof -t -i :8000)"